<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, TextViewDemoActivity!</string>
    <string name="app_name">TextViewDemo</string>
    <string name="verticalScrolling">Vertical Scrolling</string>
    <string name="horizontalScrolling">Horizontal Scrolling</string>
    <string name="editable">Editable</string>
    <string name="textView">TextView</string>
    <string name="isEditText">EditText</string>
    <string name="sampleText">The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. The quick fox jumped over the lazy dog. </string>
    <string name="scrollingMovementMethod">Use ScrollingMovementMethod</string>
    <string name="clickable">Clickable</string>
    <string name="longClickable">Long Clickable</string>
    <string name="singleLine">Single Line</string>
    <string name="cursorVisible">Cursor Visible</string>
    <string name="spannableText">Spannable Text</string>
    <string name="focusable">Focusable</string>
    <string name="linkMovementMethod">Use link movement method</string>
</resources>
